--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 html,
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;  
   font-size: 14px;
   /* color: #212121; */
   /* background-color: #f1f3f6; */
